# suaide

./: .gitignore  .travis.yml  Cargo.toml  license.md  readme.md
.task-tracker/: data.json
migrations/2020-09-06-181144_create_tasks/: down.sql  up.sql
migrations/2020-09-12-112736_add_index/: down.sql  up.sql
src/: app.rs  common.rs  config.rs  database.rs  enums.rs  errors.rs  main.rs  schema.rs  settings.rs  state.rs  storage.rs  task.rs
src/common/: constants.rs  inputs.rs  mod.rs  storage.rs  time.rs
src/domain/: errors.rs  mod.rs  status.rs  task.rs  timeframe.rs
src/enums/: mod.rs  status.rs  timeframe.rs
src/subcommands/: add.rs  close.rs  done.rs  edit.rs  list.rs  mod.rs  remove.rs  stand_up.rs  status.rs
