[package]
name = "todo_cli"
version = "0.1.0"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.6"
lazy_static = { version = "1.4" }
colored = "1.9"
confy = "0.4.0"
diesel = { version = "1.4.5", features = ["sqlite"] }
thiserror = "1.0.20"
