[package]
name = "suaide"
version = "0.1.0"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"
description = "A simple CLI app to track todos and tasks within the terminal."
readme = "readme.md"
license = "MIT"
homepage = "https://github.com/naamancurtis/suaide"
repository = "https://github.com/naamancurtis/suaide"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "tasks", "todo", "tracker", "standup"]

[dependencies]
clap = "2.33.3"
chrono = { version = "0.4.15", features = ["serde"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
dialoguer = "0.6.2"
colored = "2.0.0"
confy = "0.4.0"
diesel = { version = "1.4.5", features = ["sqlite"] }
thiserror = "1.0.20"
diesel_migrations = "1.4.0"
shellexpand = "2.0.0"
lazy_static = "1.4.0"
config = "0.10.1"
